--- a/views/home.html.erb
+++ b/views/home.html.erb
@@ -1,3 +1,101 @@
-<h1>Hello, My Name is Chippy</h1>
-<p> I write code.</br>
-My goal is to create websites that work, solve people's technology problems, and build things that make the internet a better place<br>
+<div class="top">
+	<nav class="navbar navbar-default" role="navigation">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#">Brand</a>
+		</div>
+
+
+	<!-- Collect the nav links, forms, and other content for toggling -->
+	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	<ul class="nav navbar-nav">
+	<li><a href="#">Link</a></li>
+	<li><a href="#">Link</a></li>
+	<li><a href="#">Link</a></li>
+	<li><a href="#">Link</a></li>
+	</ul>
+	</div><!-- /.navbar-collapse -->
+	</div><!-- /.container-fluid -->
+	</nav>
+</div>
+
+<div class="row" id="mission">
+	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+		<h1>Hello, <br>My Name is Chippy</h1>
+		<h2><span class="highlight orange">I write code.</br>
+			My goal is to create websites that work, solve people's technology problems, and build things that make the internet a better place<br>
+			</span></h2>
+	</div>
+</div>
+<div class="row subtitle" id="portfolio">
+	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+		<h1>
+			<span class="highlight orange">These are some projects I'm proud of:</span>
+		</h1>
+		<div class="row">
+			<div class="col-md-3 col-sm-3">
+				Project 1
+			</div>
+			<div class="col-md-3 col-sm-3">
+				Project 2
+			</div>
+			<div class="col-md-3 col-sm-3">
+				Project 3
+			</div>
+			<div class="col-md-3 col-sm-3">
+				Project 4
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="row subtitle" id="partners">
+	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+		<h1>
+			<span class="highlight orange">And these are some awesome people I've gotten to work with:</span></h1>
+		</h1>
+		<div class="row">
+			<div class="col-md-3 col-sm-3">
+				Person 1
+			</div>
+			<div class="col-md-3 col-sm-3">
+				Person 2
+			</div>
+			<div class="col-md-3 col-sm-3">
+				Person 3
+			</div>
+			<div class="col-md-3 col-sm-3">
+				Person 4
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="row subtitle" id="contact">
+	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+		<h1>
+			<span class="highlight orange">Want to reach me?</span></h1>
+		</h1>
+		<div class="row">
+			<div class="col-md-3 col-sm-3">
+				Project 1
+			</div>
+			<div class="col-md-3 col-sm-3">
+				Project 2
+			</div>
+			<div class="col-md-3 col-sm-3">
+				Project 3
+			</div>
+			<div class="col-md-3 col-sm-3">
+				Project 4
+			</div>
+		</div>
+	</div>
+</div>
+
