--- a/views/home.html.erb
+++ b/views/home.html.erb
@@ -1,32 +1,22 @@
-<div class="top">
-	<nav class="navbar navbar-default" role="navigation">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="#">Brand</a>
-		</div>
+<div class="row" id="menu-icon">
+	<div class="col-md-2 col-md-offset-7" style="text-align:right">
+		<i class="fa fa-5x fa-bars menu-icon" alt="Menu"></i>
+	</div>
+</div>
 
-
-	<!-- Collect the nav links, forms, and other content for toggling -->
-	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	<ul class="nav navbar-nav">
-	<li><a href="#">Link</a></li>
-	<li><a href="#">Link</a></li>
-	<li><a href="#">Link</a></li>
-	<li><a href="#">Link</a></li>
-	</ul>
-	</div><!-- /.navbar-collapse -->
-	</div><!-- /.container-fluid -->
-	</nav>
+<div class="row" id="menu"> 
+	<div class="menu col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" style="display:none"> 
+		<ul class="nav nav-pills nav-stacked">
+			<li role="presentation"><a href="#mission">Me</a></li>
+			<li role="presentation"><a href="#portfolio">My Work</a></li>
+			<li role="presentation"><a href="#partners">My Clients</a></li>
+			<li role="presentation"><a href="#contact">Contact</a></li>
+		</ul>
+	</div>
 </div>
 
 <div class="row" id="mission">
-	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
 		<h1>Hello, <br>My Name is Chippy</h1>
 		<h2><span class="highlight orange">I write code.</br>
 			My goal is to create websites that work, solve people's technology problems, and build things that make the internet a better place<br>
@@ -36,7 +26,7 @@
 <div class="row subtitle" id="portfolio">
 	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
 		<h1>
-			<span class="highlight orange">These are some projects I'm proud of:</span>
+			<span class="">These are some projects I'm proud of:</span>
 		</h1>
 		<div class="row">
 			<div class="col-md-3 col-sm-3">
@@ -58,7 +48,7 @@
 <div class="row subtitle" id="partners">
 	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
 		<h1>
-			<span class="highlight orange">And these are some awesome people I've gotten to work with:</span></h1>
+			<span class="">And these are some awesome people I've gotten to work with:</span></h1>
 		</h1>
 		<div class="row">
 			<div class="col-md-3 col-sm-3">
@@ -80,20 +70,23 @@
 <div class="row subtitle" id="contact">
 	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
 		<h1>
-			<span class="highlight orange">Want to reach me?</span></h1>
+			<span class="">Want to reach me?</span></h1>
 		</h1>
 		<div class="row">
-			<div class="col-md-3 col-sm-3">
-				Project 1
+			<div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1">
+				<i class="fa fa-5x fa-phone"></i>
 			</div>
-			<div class="col-md-3 col-sm-3">
-				Project 2
+			<div class="col-md-2 col-sm-2">
+				<i class="fa fa-5x fa-envelope"></i>
 			</div>
-			<div class="col-md-3 col-sm-3">
-				Project 3
+			<div class="col-md-2 col-sm-2">
+				<i class="fa fa-5x fa-twitter"></i>
 			</div>
-			<div class="col-md-3 col-sm-3">
-				Project 4
+			<div class="col-md-2 col-sm-2">
+				<i class="fa fa-5x fa-github"></i>
+			</div>
+			<div class="col-md-2 col-sm-2">
+				<i class="fa fa-5x fa-linkedin"></i>
 			</div>
 		</div>
 	</div>
