--- a/views/home.html.erb
+++ b/views/home.html.erb
@@ -1,10 +1,19 @@
 <div class="row" id="menu-icon">
-	<div class="col-md-2 col-md-offset-7" style="text-align:right">
+	<div class="col-md-2 col-md-offset-7 col-sm-2 col-sm-offset-9" style="text-align:right">
 		<i class="fa fa-5x fa-bars menu-icon" alt="Menu"></i>
 	</div>
 </div>
 
-<div class="row" id="menu"> 
+
+<div class="row" id="mission">
+	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
+		<h1>Hello, <br>My Name is Chippy</h1>
+	</div>
+</div>
+
+
+
+<div class="row"> 
 	<div class="menu col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" style="display:none"> 
 		<ul class="nav nav-pills nav-stacked">
 			<li role="presentation"><a href="#mission">Me</a></li>
@@ -15,14 +24,16 @@
 	</div>
 </div>
 
-<div class="row" id="mission">
+<div class="row" id="submission">
 	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
-		<h1>Hello, <br>My Name is Chippy</h1>
 		<h2><span class="highlight orange">I write code.</br>
 			My goal is to create websites that work, solve people's technology problems, and build things that make the internet a better place<br>
 			</span></h2>
 	</div>
 </div>
+
+
+
 <div class="row subtitle" id="portfolio">
 	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
 		<h1>
