--- a/views/home.html.erb
+++ b/views/home.html.erb
@@ -5,84 +5,55 @@
 </div>
 
 
-<div class="row" id="mission">
-	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
+<div class="row" id="header">
+	<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
 		<h1>Hello, <br>My Name is Chippy</h1>
 	</div>
 </div>
 
-
-
-<div class="row"> 
-	<div class="menu col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" style="display:none"> 
+<div class="row" id="menu"> 
+	<div class="menu col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" style="display:none"> 
 		<ul class="nav nav-pills nav-stacked">
 			<li role="presentation"><a href="#mission">Me</a></li>
 			<li role="presentation"><a href="#portfolio">My Work</a></li>
-			<li role="presentation"><a href="#partners">My Clients</a></li>
 			<li role="presentation"><a href="#contact">Contact</a></li>
 		</ul>
 	</div>
 </div>
 
-<div class="row" id="submission">
-	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
-		<h2><span class="highlight orange">I write code.</br>
-			My goal is to create websites that work, solve people's technology problems, and build things that make the internet a better place<br>
-			</span></h2>
+<div class="content row"> 
+
+	<div id="mission" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
+		<h2><strong>I like building internet things that make the world a better place</strong></h2>
 	</div>
-</div>
 
-
-
-<div class="row subtitle" id="portfolio">
-	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-		<h1>
-			<span class="">These are some projects I'm proud of:</span>
-		</h1>
+	<div id="portfolio" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+		<h3>
+			Here is some of my work...
+		</h3>
 		<div class="row">
-			<div class="col-md-3 col-sm-3">
-				Project 1
+			<div class="col-lg-3 col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 project">
+				<h4>Referrio.com</h4>
+				<p><strong>Cleveland, OH</strong><br><br>
+				Ruby | TypeForm.io<br>
+				A web app for Referrio Inc. designed to simplify the reference writing process</p>
 			</div>
-			<div class="col-md-3 col-sm-3">
-				Project 2
+			<div class="col-lg-3 col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 project">
+				The Common Good
 			</div>
-			<div class="col-md-3 col-sm-3">
-				Project 3
+			<div class="col-lg-3 col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 project">
+				United Somali Youth
 			</div>
-			<div class="col-md-3 col-sm-3">
-				Project 4
+			<div class="col-lg-3 col-md-3 col-md-offset-1 col-sm-5 col-sm-offset-1 project">
+				Kennedy Brothers Physical Therapy
 			</div>
 		</div>
 	</div>
-</div>
 
-<div class="row subtitle" id="partners">
-	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-		<h1>
-			<span class="">And these are some awesome people I've gotten to work with:</span></h1>
-		</h1>
-		<div class="row">
-			<div class="col-md-3 col-sm-3">
-				Person 1
-			</div>
-			<div class="col-md-3 col-sm-3">
-				Person 2
-			</div>
-			<div class="col-md-3 col-sm-3">
-				Person 3
-			</div>
-			<div class="col-md-3 col-sm-3">
-				Person 4
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="row subtitle" id="contact">
-	<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-		<h1>
-			<span class="">Want to reach me?</span></h1>
-		</h1>
+	<div id="contact" class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+		<h3>
+			...and other places on the internet you can find me
+		</h3>
 		<div class="row">
 			<div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1">
 				<i class="fa fa-5x fa-phone"></i>
@@ -102,4 +73,3 @@
 		</div>
 	</div>
 </div>
-
