Front End Final Mockup. TODO: APIs, Dashboard Page, etc

--- a/views/home.html.erb
+++ b/views/home.html.erb
@@ -1,32 +1,16 @@
-<div class="row" id="menu-icon">
-	<div class="col-md-2 col-md-offset-7 col-sm-2 col-sm-offset-9" style="text-align:right">
-		<i class="fa fa-5x fa-bars menu-icon" alt="Menu"></i>
-	</div>
-</div>
-
-
 <div class="row" id="header">
-	<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
+	<div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
 		<h1>Hello, <br>My Name is Chippy</h1>
 	</div>
 </div>
 
-<div class="row" id="menu"> 
-	<div class="menu col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" style="display:none"> 
-		<ul class="nav nav-pills nav-stacked">
-			<li role="presentation"><a href="#mission">Me</a></li>
-			<li role="presentation"><a href="#portfolio">My Work</a></li>
-			<li role="presentation"><a href="#contact">Contact</a></li>
-		</ul>
+<div class="mission row">
+	<div id="mission" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
+		<h2><strong>I like building internet things that make the world a better place</strong></h2>
 	</div>
 </div>
 
 <div class="content row"> 
-
-	<div id="mission" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
-		<h2><strong>I like building internet things that make the world a better place</strong></h2>
-	</div>
-
 	<div id="portfolio" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
 		<h3>
 			Here is some of my work...
@@ -34,18 +18,35 @@
 		<div class="row">
 			<div class="col-lg-3 col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 project">
 				<h4>Referrio.com</h4>
-				<p><strong>Cleveland, OH</strong><br><br>
-				Ruby | TypeForm.io<br>
-				A web app for Referrio Inc. designed to simplify the reference writing process</p>
+				<h5>Cleveland, OH</h5>
+				<h5>Ruby | TypeForm.io</h5>
+				<p><br><br>A web app for Referrio Inc. designed to simplify the reference writing process</p>
+				<p><br>Current Status: Live<br>
+				User Load: 65</p>
 			</div>
 			<div class="col-lg-3 col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 project">
-				The Common Good
+				<h4>The Common Good</h4>
+				<h5>New York, NY</h5>
+				<h5>Wordpress</h5>
+				<p><br><br>A web app for Referrio Inc. designed to simplify the reference writing process</p>
+				<p><br>Current Status: Live<br>
+				User Load: 65</p>
 			</div>
 			<div class="col-lg-3 col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 project">
-				United Somali Youth
+				<h4>United Somali Youth</h4>
+				<h5>Boston, MA</h5>
+				<h5>Wordpress</h5>
+				<p><br><br>A web app for Referrio Inc. designed to simplify the reference writing process</p>
+				<p><br>Current Status: Live<br>
+				User Load: 65</p>
 			</div>
-			<div class="col-lg-3 col-md-3 col-md-offset-1 col-sm-5 col-sm-offset-1 project">
-				Kennedy Brothers Physical Therapy
+			<div class="col-lg-3 col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 project">
+				<h4>Kennedy Brothers Physical Therapy</h4>
+				<h5>Boston, MA</h5>
+				<h5>Ruby</h5>
+				<p><br><br>A web app for Referrio Inc. designed to simplify the reference writing process</p>
+				<p><br>Current Status: Live<br>
+				User Load: 65</p>
 			</div>
 		</div>
 	</div>
