--- a/public/style.css
+++ b/public/style.css
@@ -8,15 +8,9 @@ body {
 	background-size: 100% auto;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
-	height: 2300px;
+	padding-top:90px;
 }
 
-#menu-icon {
-	text-align:right;
-	right: 32%;
-	top: 1%;
-	margin-bottom:50px;
-}
 
 #header {
 	margin-bottom:50px;
@@ -46,7 +40,6 @@ body {
 .content {
 	background-color:#f2f2f2; 
 	color:white;
-	margin-bottom:50px !important;
 }
 
 .subtitle{
@@ -61,10 +54,17 @@ body {
 	margin-bottom:50px;
 }
 
+.mission{
+	background-color:#5a6d3b;
+}
+
 .project{
-	#height: 80px;
+	height: 310px;
 	border-radius: 12px;
-	margin: 10px 15px;
+	border-style: solid;
+	border-color:#f2f2f2;
+	border-width:10px;
+	margin: 10px 0px;
 	text-align:center;
 	font-family: 'Andika', sans-serif;
 	font-size:	22px;
@@ -93,7 +93,7 @@ h1{
 }
 h2{
 	font-size: 45px;
-	color: #5a6d3b; 
+	color: white; 
 	font-family: 'Andika', sans-serif;
 	font-weight:500;
 }
@@ -104,10 +104,19 @@ h3{
 	font-weight:500;
 }
 h4{
-	font-size:20px;
+	font-size:24px;
 	color:white;
 	font-family: 'Andika', sans-serif;
 	font-weight:500;
+	margin-bottom:0px;
+}
+h5{
+	font-size:18px;
+	color:white;
+	font-family: 'Andika', sans-serif;
+	font-weight:900;
+	margin-bottom:2px;
+	margin-top:5px;
 }
 p{
 	font-size:16px;
