--- a/public/style.css
+++ b/public/style.css
@@ -59,7 +59,7 @@ body {
 }
 
 .project{
-	height: 310px;
+	height: 380px;
 	border-radius: 12px;
 	border-style: solid;
 	border-color:#f2f2f2;
@@ -81,7 +81,11 @@ body {
 	color: rgba(115, 115, 115, 0.9);
 }
 .fa:hover{
-	color: #000099;
+	color: #5a6d3b;
+}
+
+.left{
+	padding-left:50px;
 }
 
 h1{
@@ -98,7 +102,7 @@ h2{
 	font-weight:500;
 }
 h3{
-	font-size: 45px;
+	font-size: 40px;
 	color: #5a6d3b; 
 	font-family: 'Andika', sans-serif;
 	font-weight:500;
@@ -120,6 +124,30 @@ h5{
 }
 p{
 	font-size:16px;
+}
+
+.phone-display{
+	display:none;
+	color:#5a6d3b;
+	font-size:24px;
+	font-weight:bold;
+	margin:22px 0px 0px -30px;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
 }
 
 
