--- a/views/home.html.erb
+++ b/views/home.html.erb
@@ -16,60 +16,69 @@
 			Here is some of my work...
 		</h3>
 		<div class="row">
-			<div class="col-lg-3 col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 project">
+			<a target="_blank" href="http://referrio.com" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 col-sm-offset-1 project">
 				<h4>Referrio.com</h4>
 				<h5>Cleveland, OH</h5>
 				<h5>Ruby | TypeForm.io</h5>
 				<p><br><br>A web app for Referrio Inc. designed to simplify the reference writing process</p>
-				<p><br>Current Status: Live<br>
-				User Load: 65</p>
-			</div>
-			<div class="col-lg-3 col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 project">
+				<p><br><br>Current Status: Live<br>
+				User Load: 65</p></a>
+				</div></a>
+			<a target="_blank" href="http://thecommongood.net" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 col-sm-offset-1 project">
 				<h4>The Common Good</h4>
 				<h5>New York, NY</h5>
 				<h5>Wordpress</h5>
-				<p><br><br>A web app for Referrio Inc. designed to simplify the reference writing process</p>
+				<p><br><br>Tech Maintence for The Common Good, a nonprofit dedicated to reasonable discourse and a free exchange of ideas</p>
 				<p><br>Current Status: Live<br>
-				User Load: 65</p>
+				User Load: 65</p></a>
 			</div>
-			<div class="col-lg-3 col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 project">
+			<a target="_blank" href="http://unitedsomaliyouth.org" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 col-sm-offset-1 project">
 				<h4>United Somali Youth</h4>
 				<h5>Boston, MA</h5>
 				<h5>Wordpress</h5>
-				<p><br><br>A web app for Referrio Inc. designed to simplify the reference writing process</p>
+				<p><br><br>A website for USY, a community center and refuge for Boston's inner city refugee and immigrant youth</p>
 				<p><br>Current Status: Live<br>
-				User Load: 65</p>
+				User Load: 65</p></a>
 			</div>
-			<div class="col-lg-3 col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 project">
+			<a target="_blank" href="http://kennedybrotherspt.com" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 col-sm-offset-1 project">
 				<h4>Kennedy Brothers Physical Therapy</h4>
 				<h5>Boston, MA</h5>
 				<h5>Ruby</h5>
-				<p><br><br>A web app for Referrio Inc. designed to simplify the reference writing process</p>
-				<p><br>Current Status: Live<br>
-				User Load: 65</p>
+				<p><br>A web app and online marketing campaign for KBPT, Boston's premiere Physical Therapy experts</p>
+				<p><br><br>Current Status: Live<br>
+				User Load: 65</p></a>
 			</div>
 		</div>
 	</div>
 
-	<div id="contact" class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-		<h3>
+	<div id="contact" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+		<h3 class="left">
 			...and other places on the internet you can find me
 		</h3>
 		<div class="row">
-			<div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1">
-				<i class="fa fa-5x fa-phone"></i>
+			<div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1" id="phone">
+					<i class="fa fa-5x fa-phone"></i>
+					<p class="phone-display">781.686.0332</p>
 			</div>
 			<div class="col-md-2 col-sm-2">
-				<i class="fa fa-5x fa-envelope"></i>
+				<a target="_blank" href="mailto:chippykennedy32@gmail.com" style="color:white">
+					<i class="fa fa-5x fa-envelope"></i>
+				</a>
 			</div>
 			<div class="col-md-2 col-sm-2">
-				<i class="fa fa-5x fa-twitter"></i>
+				<a target="_blank" href="https://twitter.com/chippykennedy" style="color:white">
+					<i class="fa fa-5x fa-twitter"></i>
+				</a>
 			</div>
 			<div class="col-md-2 col-sm-2">
-				<i class="fa fa-5x fa-github"></i>
+				<a target="_blank" href="https://github.com/chippy-kennedy" style="color:white">
+					<i class="fa fa-5x fa-github"></i>
+				</a>
 			</div>
 			<div class="col-md-2 col-sm-2">
-				<i class="fa fa-5x fa-linkedin"></i>
+				<a target="_blank" href="https://www.linkedin.com/in/chippy-kennedy-384ba558" style="color:white">
+					<i class="fa fa-5x fa-linkedin"></i>
+				</a>
 			</div>
 		</div>
 	</div>
