Remove live stats for immediate publish

--- a/views/home.html.erb
+++ b/views/home.html.erb
@@ -21,8 +21,8 @@
 				<h5>Cleveland, OH</h5>
 				<h5>Ruby | TypeForm.io</h5>
 				<p><br><br>A web app for Referrio Inc. designed to simplify the reference writing process</p>
-				<p><br><br>Current Status: Live<br>
-				User Load: 65</p></a>
+				<p><br><br>Current Status: MVP<br>
+				<!-- User Load: 65--></p></a>
 				</div></a>
 			<a target="_blank" href="http://thecommongood.net" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 col-sm-offset-1 project">
 				<h4>The Common Good</h4>
@@ -30,7 +30,7 @@
 				<h5>Wordpress</h5>
 				<p><br><br>Tech Maintence for The Common Good, a nonprofit dedicated to reasonable discourse and a free exchange of ideas</p>
 				<p><br>Current Status: Live<br>
-				User Load: 65</p></a>
+				<!-- User Load: 65--></p></a>
 			</div>
 			<a target="_blank" href="http://unitedsomaliyouth.org" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 col-sm-offset-1 project">
 				<h4>United Somali Youth</h4>
@@ -38,7 +38,7 @@
 				<h5>Wordpress</h5>
 				<p><br><br>A website for USY, a community center and refuge for Boston's inner city refugee and immigrant youth</p>
 				<p><br>Current Status: Live<br>
-				User Load: 65</p></a>
+				<!-- User Load: 65--></p></a>
 			</div>
 			<a target="_blank" href="http://kennedybrotherspt.com" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 col-sm-offset-1 project">
 				<h4>Kennedy Brothers Physical Therapy</h4>
@@ -46,7 +46,7 @@
 				<h5>Ruby</h5>
 				<p><br>A web app and online marketing campaign for KBPT, Boston's premiere Physical Therapy experts</p>
 				<p><br><br>Current Status: Live<br>
-				User Load: 65</p></a>
+				<!-- User Load: 65--></p></a>
 			</div>
 		</div>
 	</div>
