Tweak homepage. add favicon

--- a/views/home.html.erb
+++ b/views/home.html.erb
@@ -27,7 +27,7 @@
 			<a target="_blank" href="http://thecommongood.net" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 col-sm-offset-1 project">
 				<h4>The Common Good</h4>
 				<h5>New York, NY</h5>
-				<h5>Wordpress</h5>
+				<h5>Wordpress | PHP</h5>
 				<p><br><br>Tech Maintence for The Common Good, a nonprofit dedicated to reasonable discourse and a free exchange of ideas</p>
 				<p><br>Current Status: Live<br>
 				<!-- User Load: 65--></p></a>
