--- a/views/home.erb
+++ b/views/home.erb
@@ -1,31 +1,31 @@
 <div class="row" id="header">
-	<div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
-		<h1>Hello, <br>My Name is Chip Kennedy</h1>
+	<div class="header-text col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1"> 
+		<h1><span class="highlight">Hello,&nbsp;<br>My Name is Chip Kennedy&nbsp;</span></h1>
 	</div>
 </div>
 
 <div id="mission1" class="mission row">
-	<div class="mission-text col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
+	<div class="mission-text col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1"> 
 		<h2><strong>I'm a full stack software engineer and consultant</strong></h2>
 	</div>
 </div>
 
 <div id="mission2" class="mission row">
-	<div class="mission-text col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
+	<div class="mission-text col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1"> 
 		<h2><strong>And I partner with companies to solve challenges</strong></h2>
 	</div>
 </div>
 
 <div id="mission3" class="mission row">
-	<div class="mission-text col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
+	<div class="mission-text col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1"> 
 		<h2><strong>With business-minded and human-centric technology</strong></h2>
 	</div>
 </div>
 
 <div class="content row"> 
-	<div id="portfolio" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+	<div id="portfolio" class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1"> 
 		<div class="row">
-			<a target="_blank" href="http://referrio.com" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 col-sm-offset-1 project">
+			<a target="_blank" href="http://referrio.com" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 offset-sm-1 project">
 				<h4>Referrio.com</h4>
 				<h5>Cleveland, OH</h5>
 				<h5>Ruby | TypeForm.io</h5>
@@ -33,7 +33,7 @@
 				<p><br><br>Current Status: MVP<br>
 				<!-- User Load: 65--></p></a>
 				</div></a>
-			<a target="_blank" href="http://thecommongood.net" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 col-sm-offset-1 project">
+			<a target="_blank" href="http://thecommongood.net" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 offset-sm-1 project">
 				<h4>The Common Good</h4>
 				<h5>New York, NY</h5>
 				<h5>Wordpress | PHP</h5>
@@ -41,7 +41,7 @@
 				<p><br>Current Status: Live<br>
 				<!-- User Load: 65--></p></a>
 			</div>
-			<a target="_blank" href="http://unitedsomaliyouth.org" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 col-sm-offset-1 project">
+			<a target="_blank" href="http://unitedsomaliyouth.org" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 offset-sm-1 project">
 				<h4>United Somali Youth</h4>
 				<h5>Boston, MA</h5>
 				<h5>Wordpress</h5>
@@ -49,7 +49,7 @@
 				<p><br>Current Status: Live<br>
 				<!-- User Load: 65--></p></a>
 			</div>
-			<a target="_blank" href="http://kennedybrotherspt.com" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 col-sm-offset-1 project">
+			<a target="_blank" href="http://kennedybrotherspt.com" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 offset-sm-1 project">
 				<h4>Kennedy Brothers Physical Therapy</h4>
 				<h5>Boston, MA</h5>
 				<h5>Ruby</h5>
@@ -60,14 +60,14 @@
 		</div>
 	</div>
 
-	<div id="contact" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+	<div id="contact" class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
 		<h3 class="left">
 			...and other places on the internet you can find me
 		</h3>
 		<div class="row">
-			<div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1" id="phone">
+			<div class="col-md-2 offset-md-1 col-sm-2 offset-sm-1" id="phone">
 					<i class="fa fa-5x fa-phone"></i>
-					<p class="phone-display">781.686.0332</p>
+					<p class="phone-display">780.686.0332</p>
 			</div>
 			<div class="col-md-2 col-sm-2">
 				<a target="_blank" href="mailto:chippykennedy32@gmail.com" style="color:white">
