Change homepage to new theme

--- a/assets/stylesheeets/application.scss
+++ b/assets/stylesheeets/application.scss
@@ -75,11 +75,12 @@ span.highlight {
 }
 
 .mission{
-	height:120px;
+	display:flex;
 }
 
 .mission-text{
 	margin-top:20px;
+	margin-bottom:20px;
 }
 
 #mission1{
