--- a/views/home.html.erb
+++ b/views/home.html.erb
@@ -18,7 +18,7 @@
 
 <div class="mission3 row">
 	<div id="mission" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> 
-		<h2><strong style="color:#5a6d3b">With business-minded and human-centric technology</strong></h2>
+		<h2><strong style="color:#5a6d3b">Using business-minded and human-centric technology</strong></h2>
 	</div>
 </div>
 
@@ -59,11 +59,13 @@
 			</div>
 		</div>
 	</div>
+</div>
 
-	<div id="contact" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-		<h3 class="left">
-			...and other places on the internet you can find me
-		</h3>
+<div class="row">
+	<div id="tech" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+		<h2>PenisPenisPeni</h2>
+	</div>
+</div>
 		<div class="row">
 			<div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1" id="phone">
 					<i class="fa fa-5x fa-phone"></i>
