--- a/views/home.erb
+++ b/views/home.erb
@@ -1,6 +1,6 @@
 <div class="row" id="header">
-	<div class="header-text col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1"> 
-		<h1><span class="highlight">Hello,&nbsp;<br>My Name is Chip Kennedy&nbsp;</span></h1>
+	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1"> 
+		<h1><span class="highlight">Hello,&nbsp;<br>My Name is Chippy&nbsp;</span></h1></span>
 	</div>
 </div>
 
@@ -12,83 +12,100 @@
 
 <div id="mission2" class="mission row">
 	<div class="mission-text col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1"> 
-		<h2><strong>And I partner with companies to solve challenges</strong></h2>
+		<h2><strong>And I partner with companies to solve problems</strong></h2>
 	</div>
 </div>
 
 <div id="mission3" class="mission row">
 	<div class="mission-text col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1"> 
-		<h2><strong>With business-minded and human-centric technology</strong></h2>
+		<h2><strong>Using business-minded and human-centric technology</strong></h2>
 	</div>
 </div>
 
-<div class="content row"> 
-	<div id="portfolio" class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1"> 
-		<div class="row">
-			<a target="_blank" href="http://referrio.com" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 offset-sm-1 project">
-				<h4>Referrio.com</h4>
-				<h5>Cleveland, OH</h5>
-				<h5>Ruby | TypeForm.io</h5>
-				<p><br><br>A web app for Referrio Inc. designed to simplify the reference writing process</p>
-				<p><br><br>Current Status: MVP<br>
-				<!-- User Load: 65--></p></a>
-				</div></a>
-			<a target="_blank" href="http://thecommongood.net" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 offset-sm-1 project">
-				<h4>The Common Good</h4>
-				<h5>New York, NY</h5>
-				<h5>Wordpress | PHP</h5>
-				<p><br><br>Tech Maintence for The Common Good, a nonprofit dedicated to reasonable discourse and a free exchange of ideas</p>
-				<p><br>Current Status: Live<br>
-				<!-- User Load: 65--></p></a>
+<div class="services-title row"> 
+	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
+		<h2 class="section-title">My Services</h2>
+	</div>
+</div>
+
+<div class="services row">
+	<div class="col-md-11 offset-md-1 col-lg-11 offset-lg-1 col-sm-12">
+		<div style="margin:80px 0px" class="row">
+			<div style="margin-top:120px;"class="col-md-1 offset-md-1 col-sm-2 offset-sm-1 col-xs-3">
+				<h2><span class="and">&</span></h2>
 			</div>
-			<a target="_blank" href="http://unitedsomaliyouth.org" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 offset-sm-1 project">
-				<h4>United Somali Youth</h4>
-				<h5>Boston, MA</h5>
-				<h5>Wordpress</h5>
-				<p><br><br>A website for USY, a community center and refuge for Boston's inner city refugee and immigrant youth</p>
-				<p><br>Current Status: Live<br>
-				<!-- User Load: 65--></p></a>
-			</div>
-			<a target="_blank" href="http://kennedybrotherspt.com" style="color:white"><div class="col-lg-3 col-md-5 col-sm-5 offset-sm-1 project">
-				<h4>Kennedy Brothers Physical Therapy</h4>
-				<h5>Boston, MA</h5>
-				<h5>Ruby</h5>
-				<p><br>A web app and online marketing campaign for KBPT, Boston's premiere Physical Therapy experts</p>
-				<p><br><br>Current Status: Live<br>
-				<!-- User Load: 65--></p></a>
+			<div class="col-md-8 col-sm-9 col-xs-9">
+				<h2><span class="first">Software Engineering</span>
+					<h5 style="font-size:28px; ">Ruby<span class="dot">  &#8226; </span>Rails<span class="dot">  &#8226</span>Python<span class="dot">  &#8226; </span>Java<span class="dot">  &#8226; </span>Javascript<span class="dot">  &#8226; </span>iOS<span class="dot">  &#8226; </span>Sql<span class="dot">  &#8226; </span>MySql<span class="dot">  &#8226; </span>Postgres<span class="dot">  &#8226; </span>Linux</h5></br></br>
+				<h2><span class="second">Technology Management</span></h2>
+				<h5 style="font-size:28px; ">Agile Development<span class="dot">   &#8226;  </span>Product Design<span class="dot">  &#8226; </span>Full Stack Architecture<span class="dot">  &#8226; </span>Dev Ops<span class="dot">  &#8226; </span>Test Driven</h5>
 			</div>
 		</div>
+	</div>
+</div>
+
+<div class="portfolio-title row"> 
+	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
+		<h2 class="section-title">My Clients</h2>
+	</div>
+</div>
+
+<div class="portfolio row">
+	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
+		<div class="row">
+			<div class="col-md-6 col-xs-12 col-sm-12"> 
+				<h3 style="text-align:center;">Referrio</h3>
+				<br><strong>The Challenge</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+				<br><strong>My Contribution</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven
+				<br><strong>The Impact</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				<br><strong>Client Quote</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veni
+			</div>
+			<div class="col-md-6 col-xs-12 col-sm-12"> 
+				<h3 style="text-align:center;">United Somali Youth</h3>
+				<br><strong>The Challenge</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+				<br><strong>My Contribution</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven
+				<br><strong>The Impact</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				<br><strong>Client Quote</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veni
+			</div>
+			<div style="margin-top:50px;" class="col-md-12">
+				<h3 style="text-align:center;">And a B&W non-link list of other client logos</h3>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<div class="contact-title row"> 
+	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
+		<h2 class="section-title">Contact Me</h2>
+	</div>
+</div>
+
+
+<div class="contact row">
+	<div class="col-md-2 offset-md-1 col-sm-2 offset-sm-1" id="phone">
+			<i class="fa fa-5x fa-phone"></i>
+			<p class="phone-display">781.686.0332</p>
+	</div>
+	<div class="col-md-2 col-sm-2">
+		<a target="_blank" href="mailto:chippykennedy32@gmail.com" style="color:white">
+			<i class="fa fa-5x fa-envelope"></i>
+		</a>
+	</div>
+	<div class="col-md-2 col-sm-2">
+		<a target="_blank" href="https://twitter.com/chippykennedy" style="color:white">
+			<i class="fa fa-5x fa-twitter"></i>
+		</a>
+	</div>
+	<div class="col-md-2 col-sm-2">
+		<a target="_blank" href="https://github.com/chippy-kennedy" style="color:white">
+			<i class="fa fa-5x fa-github"></i>
+		</a>
+	</div>
+	<div class="col-md-2 col-sm-2">
+		<a target="_blank" href="https://www.linkedin.com/in/chippy-kennedy-384ba558" style="color:white">
+			<i class="fa fa-5x fa-linkedin"></i>
+		</a>
 	</div>
 
-	<div id="contact" class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
-		<h3 class="left">
-			...and other places on the internet you can find me
-		</h3>
-		<div class="row">
-			<div class="col-md-2 offset-md-1 col-sm-2 offset-sm-1" id="phone">
-					<i class="fa fa-5x fa-phone"></i>
-					<p class="phone-display">780.686.0332</p>
-			</div>
-			<div class="col-md-2 col-sm-2">
-				<a target="_blank" href="mailto:chippykennedy32@gmail.com" style="color:white">
-					<i class="fa fa-5x fa-envelope"></i>
-				</a>
-			</div>
-			<div class="col-md-2 col-sm-2">
-				<a target="_blank" href="https://twitter.com/chippykennedy" style="color:white">
-					<i class="fa fa-5x fa-twitter"></i>
-				</a>
-			</div>
-			<div class="col-md-2 col-sm-2">
-				<a target="_blank" href="https://github.com/chippy-kennedy" style="color:white">
-					<i class="fa fa-5x fa-github"></i>
-				</a>
-			</div>
-			<div class="col-md-2 col-sm-2">
-				<a target="_blank" href="https://www.linkedin.com/in/chippy-kennedy-384ba558" style="color:white">
-					<i class="fa fa-5x fa-linkedin"></i>
-				</a>
-			</div>
-		</div>
-	</div>
 </div>
