change homepage copy

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,6 +1,6 @@
 <div class="row" id="header">
 	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1"> 
-		<h1><span class="highlight">Hello,&nbsp;<br>My Name is Chippy&nbsp;</span></h1></span>
+		<h1><span class="highlight">Hello,&nbsp;<br>My Name is Chip Kennedy&nbsp;</span></h1></span>
 	</div>
 </div>
 
@@ -12,7 +12,7 @@
 
 <div id="mission2" class="mission row">
 	<div class="mission-text col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1"> 
-		<h2><strong>And I partner with companies to solve problems</strong></h2>
+		<h2><strong>And I partner with companies to solve challenges</strong></h2>
 	</div>
 </div>
 
