front end + js tweaks. WIP: js still not loading properly w/ sinatra setup

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,4 +1,21 @@
-<div class="row" id="header">
+<div class="menu row">
+<ul class="nav flex-column">
+  <li class="nav-item">
+    <a class="nav-link" href="#header"><h5 style="margin-left:0px;">Chip Kennedy</h5></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#services"><i class="fa fa-square-o fa-2x"></i><h5>Services</h5></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#portfolio"><i class="fa fa-square-o fa-2x"></i><h5>Clients</h5></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#contact"><i class="fa fa-square-o fa-2x"></i><h5>Contact</h5></a>
+  </li>
+</ul>
+</div>
+
+<div class="header row" id="header">
 	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1"> 
 		<h1><span class="highlight">Hello,&nbsp;<br>My Name is Chip Kennedy&nbsp;</span></h1></span>
 	</div>
@@ -22,7 +39,7 @@
 	</div>
 </div>
 
-<div class="services-title row"> 
+<div class="services-title row" id="services"> 
 	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
 		<h2 class="section-title">My Services</h2>
 	</div>
@@ -44,7 +61,7 @@
 	</div>
 </div>
 
-<div class="portfolio-title row"> 
+<div class="portfolio-title row" id="portfolio"> 
 	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
 		<h2 class="section-title">My Clients</h2>
 	</div>
@@ -75,7 +92,7 @@
 </div>
 
 
-<div class="contact-title row"> 
+<div class="contact-title row" id="contact"> 
 	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
 		<h2 class="section-title">Contact Me</h2>
 	</div>
