--- a/assets/stylesheeets/application.scss
+++ b/assets/stylesheeets/application.scss
@@ -1,6 +1,8 @@
 /* imports */
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 @import "bootstrap";
+@import "font-awesome-compass";
+@import "font-awesome";
 
 /* global vars */
 $header-font: 				'Montserrat', sans-serif;
@@ -9,6 +11,7 @@ $secondary-green:			#413DDA;
 $teriary-green:				#AEBEFF;
 $primary-background:	#f2f2f2;
 $secondary-background: rgba(115, 115, 115, 0.9);
+$background-fade: rgba(115, 115, 115, 0.5);
 
 body {
 	background-color: $secondary-background;
@@ -59,9 +62,9 @@ span.dot{
 	margin: 110px 0px;
 }
 
-#header {
+.header {
 	margin-bottom:50px;
-	height:400px;
+	height:500px;
 }
 
 .header-text{
@@ -69,12 +72,27 @@ span.dot{
 }
 
 .menu {
-	height: 500px;
-	background-color: $secondary-background; 
+	background-color: $background-fade; 
 	position: absolute;
 	z-index: 999;
-	opacity: 0.95;
-	border-radius:5px;
+	//opacity: 0.65;
+	border-radius:0px;
+	right:4%;
+	li{
+		font-family: $header-font !important;
+		color:white !important;
+
+		a i{
+			color:white !important;
+			float:left;
+		}
+		a h5{
+			float:left;
+			color:white !important;
+			margin: 5px 0px 2px 9px;
+		}
+
+	}	
 }
 
 .portfolio-title{
@@ -101,14 +119,6 @@ span.dot{
 	height:400px;
 	//display:flex;
 	background-color: $primary-background;
-}
-
-.menu li a{
-	font-family: $header-font !important;
-	font-size:	50px;
-	color:white;
-	text-align:center;
-	margin-bottom:50px;
 }
 
 .fa{
@@ -173,7 +183,7 @@ span.dot{
 .fa{
 	color: $secondary-background; 
 }
-.fa:hover{
+.faServiceser{
 	color: $primary-green;
 }
 
