--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,10 +5,12 @@
 
 		<link href="<%= stylesheet_path('application') %>" rel="stylesheet"></link>
 		<script src="<%= javascript_path('application') %>"></script>
+		<script type="text/javascript" src="jquery-3.1.1.slim.min.js"></script>
+		<script type="text/javascript" src="jquery.viewportchecker.min.js"></script>
 
 		<!-- Styles -->
 
-		<title>Chippy Kennedy</title>
+		<title>Chip Kennedy</title>
 	</head>
 	<body>
 		
