add client images and css

--- a/views/home.erb
+++ b/views/home.erb
@@ -71,14 +71,14 @@
 	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
 		<div class="row">
 			<div class="col-md-6 col-xs-12 col-sm-12"> 
-				<h3 style="text-align:center;">Referrio</h3>
+				<img style="display: block;margin: auto;margin-top:20px;"	src="Referrio.png">
 				<br><strong>The Challenge</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
 				<br><strong>My Contribution</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven
 				<br><strong>The Impact</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				<br><strong>Client Quote</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veni
 			</div>
 			<div class="col-md-6 col-xs-12 col-sm-12"> 
-				<h3 style="text-align:center;">United Somali Youth</h3>
+				<img style="display: block;margin: auto;margin-top:60px;"	src="USY.png" alt="United Somali Youth">
 				<br><strong>The Challenge</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
 				<br><strong>My Contribution</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven
 				<br><strong>The Impact</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
