Add client logo assets

--- a/views/home.erb
+++ b/views/home.erb
@@ -85,7 +85,20 @@
 				<br><strong>Client Quote</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veni
 			</div>
 			<div style="margin-top:50px;" class="col-md-12">
-				<h3 style="text-align:center;">And a B&W non-link list of other client logos</h3>
+				<div class="row">
+				<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+					<img style="display: block;margin: auto;margin-top:60px;"	src="PLANIT.png">
+				</div>
+				<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+					<img style="display: block;margin: auto;margin-top:60px;"	src="TCG.png">
+				</div>
+				<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+					<img style="display: block;margin: auto;margin-top:60px;"	src="KBPT.png">
+				</div>
+				<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+					<img style="display: block;margin: auto;margin-top:60px;"	src="MAGIC.png">
+				</div>
+				</div>
 			</div>
 		</div>
 	</div>
