--- a/views/home.erb
+++ b/views/home.erb
@@ -1,5 +1,5 @@
 <div class="menu row">
-<ul class="nav flex-column">
+<ul style="width:300px;" class="nav flex-column">
   <li class="nav-item">
     <a class="nav-link" href="#header"><h5 style="margin-left:0px;">Chip Kennedy</h5></a>
   </li>
@@ -39,13 +39,13 @@
 	</div>
 </div>
 
-<div class="services-title row" id="services"> 
+<div class="title row" id="services"> 
 	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
 		<h2 class="section-title">My Services</h2>
 	</div>
 </div>
 
-<div class="services row">
+<div class="services section row">
 	<div class="col-md-11 offset-md-1 col-lg-11 offset-lg-1 col-sm-12">
 		<div style="margin:80px 0px" class="row">
 			<div style="margin-top:120px;"class="col-md-1 offset-md-1 col-sm-2 offset-sm-1 col-xs-3">
@@ -61,28 +61,22 @@
 	</div>
 </div>
 
-<div class="portfolio-title row" id="portfolio"> 
+<div class="title row" id="portfolio"> 
 	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
 		<h2 class="section-title">My Clients</h2>
 	</div>
 </div>
 
-<div class="portfolio row">
+<div class="portfolio section row">
 	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
 		<div class="row">
 			<div class="col-md-6 col-xs-12 col-sm-12"> 
 				<img style="display: block;margin: auto;margin-top:20px;"	src="Referrio.png">
-				<br><strong>The Challenge</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-				<br><strong>My Contribution</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven
-				<br><strong>The Impact</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				<br><strong>Client Quote</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veni
+				<br><a href="referrio"><h5 class="font-link" style="text-align:center;"><strong>>> View the Case Study</strong> </h5></a>
 			</div>
 			<div class="col-md-6 col-xs-12 col-sm-12"> 
 				<img style="display: block;margin: auto;margin-top:60px;"	src="USY.png" alt="United Somali Youth">
-				<br><strong>The Challenge</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-				<br><strong>My Contribution</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven
-				<br><strong>The Impact</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				<br><strong>Client Quote</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veni
+				<br><a href="usy"><h5 class="font-link" style="text-align:center;"><strong>>> View the Case Study</strong> </h5></a>
 			</div>
 			<div style="margin-top:50px;" class="col-md-12">
 				<div class="row">
@@ -104,15 +98,25 @@
 	</div>
 </div>
 
+<div class="title row" id="partners"> 
+	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
+		<h2 class="section-title">My Partners</h2>
+	</div>
+</div>
 
-<div class="contact-title row" id="contact"> 
+<div class="partners section row">
+	partners
+</div>
+
+
+<div class="title row" id="contact"> 
 	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
 		<h2 class="section-title">Contact Me</h2>
 	</div>
 </div>
 
 
-<div class="contact row">
+<div class="contact section row">
 	<div class="col-md-2 offset-md-1 col-sm-2 offset-sm-1" id="phone">
 			<i class="fa fa-5x fa-phone"></i>
 			<p class="phone-display">781.686.0332</p>
